--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -3,7 +3,7 @@
     --landing-card-height: 480px;
     --landing-card-width: 340px;
     --landing-card-img-height: 280px;
-    --landing--card-img-width: 280px;
+    --landing-card-img-width: 280px;
 }
 
 /* RECENTLY ADDED */
@@ -52,17 +52,25 @@
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
 }
-.recently-added-card img{
-    width: var(--landing--card-img-width);
-    height: var(--landing-card-img-height);
-    object-fit:cover;
-    border-radius: 30px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.20);
+.imageBox{
     position: relative;
     bottom: 40px;
     right: 40px;
     margin-bottom: -40px;
     z-index: 10;
+    border-radius: 30px;
+    width: var(--landing-card-img-width);
+    height: var(--landing-card-img-height);
+    overflow: hidden;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.20);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.recently-added-card img{
+    object-fit: cover;
+    width: 100%;
+    height: auto;
 }
 .landing-card-content{
     width: 100%;
@@ -154,7 +162,7 @@
         --landing-card-height: 420px;
         --landing-card-width: 310px;
         --landing-card-img-height: 240px;
-        --landing--card-img-width: 240px;
+        --landing-card-img-width: 240px;
     }
     .landing-card-content{
         padding: 20px 10px 20px 20px;
@@ -206,7 +214,7 @@
         --landing-card-height: 460px;
         --landing-card-width: 320px;
         --landing-card-img-height: 260px;
-        --landing--card-img-width: 260px;
+        --landing-card-img-width: 260px;
     }
     #additional-blobs{
         display: flex;
@@ -222,7 +230,7 @@
         --landing-card-height: 390px;
         --landing-card-width: 300px;
         --landing-card-img-height: 230px;
-        --landing--card-img-width: 230px;
+        --landing-card-img-width: 230px;
     }
     #landing-heading{
         margin-bottom: 8vw;
@@ -245,7 +253,7 @@
         --landing-card-height: 380px;
         --landing-card-width: 280px;
         --landing-card-img-height: 210px;
-        --landing--card-img-width: 210px;
+        --landing-card-img-width: 210px;
     }
 }
 @media (max-width: 330px){
@@ -253,7 +261,7 @@
         --landing-card-height: 360px;
         --landing-card-width: 250px;
         --landing-card-img-height: 180px;
-        --landing--card-img-width: 180px;
+        --landing-card-img-width: 180px;
     }
     .recently-added-card{
         margin-top: 30px;
